samples/_failures_safe/1761545836_24e682_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8695b5c2.c: In function ‘main’:
./samples/SAFE/__tmp_8695b5c2.c:158:5: error: expected expression at end of input
  158 |     for (
      |     ^~~
./samples/SAFE/__tmp_8695b5c2.c:158:5: error: expected declaration or statement at end of input
